--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Shell</title>
+	<title>jsTerm</title>
 	<link href="http://fonts.googleapis.com/css?family=VT323" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="shortcut icon" href="images/favicon.png">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script type="text/javascript" src="shell.js"></script>
 </head>
