--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 </head>
 <body>
 
-	<div id="overlay" onclick="core.focusInput()"></div>
-
 	<div id="wrapper">
 		
 		<div id="shell">
@@ -26,6 +24,8 @@
 		</div>
 
 	</div>
+
+	<div id="underlay" onclick="core.focusInput()"></div>
 
 </body>
 </html>
